--- a/index.html
+++ b/index.html
@@ -9,11 +9,37 @@
 </head>
 
 <body>
-    <div id="countryDetail">
 
+    <div id="container">
+        <div id="list">
+            <ul id="ul"></ul>
+        </div>
+        <div id="details">
+            <div id="Country-Flag">
+                <img id="flagImg" src="https://restcountries.eu/data/afg.svg" alt="">
+            </div>
+            <div id="Country-Details-Container">
+                <h1 id="Country-Name">Afghanistan</h1>
+                <div id="Country-Details">
+                    <p class="Details-paragraph">Native Name: <span id="Native-Name"
+                            class="Details-Span">افغانستان</span></p>
+                    <p class="Details-paragraph">Calling Codes: <span id="Calling-Codes" class="Details-Span">93</span>
+                    </p>
+                    <p class="Details-paragraph">Capital: <span id="Capital" class="Details-Span">Kabul</span></p>
+                    <p class="Details-paragraph">Area: <span id="Area" class="Details-Span">652230</span></p>
+                    <p class="Details-paragraph">Languages: <span id="Languages"
+                            class="Details-Span">Pashto,Uzbek,Turkmen</span></p>
+                    <p class="Details-paragraph">Population: <span id="Population" class="Details-Span">27657145</span>
+                    </p>
+                    <p class="Details-paragraph">Region: <span id="Region" class="Details-Span">Asia</span></p>
+                    <p class="Details-paragraph">Time-Zone: <span id="Time-Zone" class="Details-Span">UTC+04:30</span>
+                    </p>
+                    <p class="Details-paragraph">Top Level Domain: <span id="Domain" class="Details-Span">.af</span></p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="countries">
-    </div>
+
     <script src="app.js"></script>
 </body>
 
